Adding readme.md, adding stuff to .gitignore and some other project settings.

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,6 +1,14 @@
 <ion-view view-title="Dashboard">
     <ion-content class="padding">
         <div class="list card">
+            <div class="item item-divider">Monthly Summary</div>
+            <div class="item item-body">
+                12<br>
+                32<br>
+                03<br>
+            </div>
+        </div>
+        <div class="list card">
             <div class="item item-divider">Recent Updates</div>
             <div class="item item-body">
                 <div>
