Simple implementation of adding a price and displaying it in the dashboard.

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,36 +1,10 @@
 <ion-view view-title="Dashboard">
     <ion-content class="padding">
-        <div class="list card">
-            <div class="item item-divider">Monthly Summary</div>
-            <div class="item item-body">
-                12<br>
-                32<br>
-                03<br>
-            </div>
-        </div>
-        <div class="list card">
-            <div class="item item-divider">Recent Updates</div>
-            <div class="item item-body">
-                <div>
-                    There is a fire in <b>sector 3</b>
-                </div>
-            </div>
-        </div>
-        <div class="list card">
-            <div class="item item-divider">Health</div>
-            <div class="item item-body">
-                <div>
-                    You ate an apple today that the doctor didn't give!
-                </div>
-            </div>
-        </div>
-        <div class="list card">
-            <div class="item item-divider">Upcoming</div>
-            <div class="item item-body">
-                <div>
-                    You have <b>29</b> meetings on your calendar tomorrow.
-                </div>
-            </div>
+        <div class="list">
+            <a ng-repeat="purchase in dashCtrl.purchases" class="item" href="#">
+                {{purchase.name}}
+                <span class="item-note" ng-bind="purchase.value"></span>
+            </a>
         </div>
     </ion-content>
 </ion-view>
