--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,7 +6,12 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
     <!-- Dashboard Tab -->
-    <ion-tab title="Status" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
+    <ion-tab title="Add Purchase" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/add">
+        <ion-nav-view name="tab-add"></ion-nav-view>
+    </ion-tab>
+
+    <!-- Dashboard Tab -->
+    <ion-tab title="Dashboard" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
         <ion-nav-view name="tab-dash"></ion-nav-view>
     </ion-tab>
 
@@ -19,10 +24,4 @@ navigation history that also transitions its views in and out.
     <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
         <ion-nav-view name="tab-account"></ion-nav-view>
     </ion-tab>
-
-    <!-- Account Tab -->
-    <ion-tab title="Setting" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/settings">
-        <ion-nav-view name="tab-settings"></ion-nav-view>
-    </ion-tab>
-
 </ion-tabs>
