Uses ion-autocomplete for the vendor field and made the numbers only validation to be a directive.

--- a/www/components/purchase/tab-add.html
+++ b/www/components/purchase/tab-add.html
@@ -3,11 +3,7 @@
         <div>
             <label class="item item-input item-floating-label">
                 <span class="input-label">What did you buy?</span>
-                <input 
-                    type="text"
-                    placeholder="What did you buy?"
-                    ng-model="purchaseCtrl.item.name"
-                    autofocus>
+                <input ion-autocomplete type="text" class="ion-autocomplete" autocomplete="on" placeholder="Where did you make your purchase?" />
                 <span class="input-label">For how much?</span>
                 <input 
                     type="tel" 
