--- a/www/components/purchase/tab-add.html
+++ b/www/components/purchase/tab-add.html
@@ -2,16 +2,27 @@
     <ion-content>
         <div>
             <label class="item item-input item-floating-label">
-                <span class="input-label">What did you buy?</span>
-                <input ion-autocomplete type="text" class="ion-autocomplete" autocomplete="on" placeholder="Where did you make your purchase?" />
-                <span class="input-label">For how much?</span>
-                <input 
-                    type="tel" 
-                    placeholder="For how much?" 
-                    ng-model="purchaseCtrl.item.price"
-                    ng-keypress="purchaseCtrl.validatePriceInput($event)">
+                <span class="input-label">Where did you make your purchase?</span>
+                <input ion-autocomplete
+                       class="ion-autocomplete"
+                       type="text"
+                       ng-model="purchaseCtrl.item.name"
+                       autocomplete="on"
+                       placeholder="Where did you make your purchase?"
+                       items-method="purchaseCtrl.getTags(query)"
+                       items-clicked-method="purchaseCtrl.selectItem(callback)"
+                       item-value-key="id"
+                       item-view-value-key="name"
+                       cancel-label="Cancel"/>
             </label>
-            <button class="button button-positive button-full" 
+            <label class="item item-input item-floating-label">
+                <span class="input-label">For how much?</span>
+                <input type="tel"
+                       placeholder="For how much?"
+                       ng-model="purchaseCtrl.item.price"
+                       numbers-only/>
+            </label>
+            <button class="button button-positive button-full"
                     ng-click="purchaseCtrl.addPurchase(purchaseCtrl.item)">
                 Submit
             </button>
